assets/css/style.css
/* ... */
.swal2-title {
	color: var(--text) !important;
}

/********************************************************************************
****************************** cookieconsent styles *****************************
/********************************************************************************/
.show--settings {
	height: auto;
	overflow-y: hidden;
}

.c-bn:focus-visible,
.b-tl.exp:focus-visible,
.c-tgl:focus-visible,
.cc-link:focus-visible {
	outline: 2px solid #2196F3;
}

@media (prefers-color-scheme: dark) {

	.c-bn:focus-visible,
	.b-tl.exp:focus-visible,
	.c-tgl:focus-visible,
	.cc-link:focus-visible {
		outline: 2px solid #1E88E5;
	}
}

/********************************************************************************
************************************ Header *************************************
/********************************************************************************/
#navbar {
	position: relative;
	z-index: 99;
}

#navbar>#breadcumb {
	overflow: hidden;
}

#navbar,
#navbar>#breadcumb {
	/* The transition is glitched rigth now on Chrome. Keep an eye on chromium bug #1463779 too see when it will be fixed. */
	transition: height .15s ease, background-color .15s ease, backdrop-filter .4s ease, -webkit-backdrop-filter .4s ease;
}

#navbar>#breadcumb>#title-container {
	user-select: none;
	position: relative;
	overflow: hidden;
}

#navbar>#breadcumb>#title-container,
#navbar>#breadcumb>.link {
	font-weight: 700;
	font-size: 24px;
	line-height: 27px;
	text-decoration: none;
}

#navbar>#breadcumb>#title-container>.real-title,
#navbar>#breadcumb>#title-container>.loading-title {
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	cursor: default;
}

#navbar>#breadcumb>.link {
	flex-shrink: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	font-size: 17px;
	border-radius: 50%;
	height: var(--back-width);
	width: var(--back-width);
}

#navbar>.buttons>.button>.icon {
	height: 17px;
	display: inline-flex;
	justify-content: center;
}

#navbar>#breadcumb>#title-container>.loading-title {
	position: absolute;
}

#navbar>#breadcumb>#title-container.loading>.real-title,
#navbar>#breadcumb>#title-container.loading>.loading-title {
	transform: translateY(-100%);
}

#navbar>#breadcumb>#title-container.loading>.real-title,
#navbar>#breadcumb>#title-container>.loading-title {
	opacity: 0;
}

#navbar>#breadcumb>#title-container>.real-title,
#navbar>#breadcumb>#title-container.loading>.loading-title {
	opacity: 1;
}

#navbar>#breadcumb>.link,
#navbar>#breadcumb>#title-container,
#navbar>#breadcumb>#title-container>* {
	transition: background-color .15s ease, filter .15s ease, transform .2s ease-in-out, opacity .2s ease;
}

#navbar>#breadcumb>.link,
#navbar>#breadcumb>#title-container>.real-title {
	transform: none;
}

@media (hover: hover) {

	#navbar>#breadcumb>.link:hover,
	#navbar>#breadcumb>.link:focus-visible {
		background: var(--button-bg-hover-inverted);
		filter: invert(1);
	}
}

@media (hover: none) {

	#navbar>#breadcumb>.link:active,
	#navbar>#breadcumb>.link:focus-visible {
		background: var(--button-bg-hover-inverted);
		filter: invert(1);
	}
}

@media only screen and (min-width: 1024px) {
	#navbar {
		position: fixed;
		height: 65px;
		width: 100%;
		left: 0;
		top: 0;
		display: flex;
		align-items: center;
		justify-content: space-between;
		padding: 0 50px;
	}

	#navbar:not([class*="shrinked"]) {
		height: var(--navbar-h-noshrink);
	}

	#navbar.shrinked {
		border-bottom: 1px solid var(--navbar-border);
		background-color: var(--navbar-bg);
		backdrop-filter: blur(10px);
		-webkit-backdrop-filter: blur(10px);
	}

	#navbar>.buttons {
		display: inline-flex;
		flex-shrink: 0;
	}

	#navbar>.buttons>.button {
		margin-left: 10px;
	}

	#navbar>#breadcumb {
		display: inline-flex;
		min-width: 0;
	}

	#navbar>#breadcumb>#title-container,
	#navbar>#breadcumb>.link {
		margin: 18px 0;
	}

	#navbar>#breadcumb>#title-container {
		/* do not use padding for absolute positioned elements */
		border: 10px solid transparent;
		border-top: none;
		border-bottom: none;
	}

	#navbar>#breadcumb>.link[data-insert-navigation="false"]~#title-container,
	#navbar>#breadcumb>.link[data-insert-navigation="false"] {
		transform: translateX(calc(var(--back-width) * -1));
	}
}
/* ... */

